tests/ui/generic-const-items/assoc-const-no-infer-ice-115806.stderr
error: `unsized_const_params` requires `adt_const_params` to be enabled
  --> $DIR/assoc-const-no-infer-ice-115806.rs:3:36
   |
LL | #![feature(min_generic_const_args, unsized_const_params)]
   |                                    ^^^^^^^^^^^^^^^^^^^^
   |
   = help: enable all of these features

error[E0119]: conflicting implementations of trait `Pins<_>` for type `NoPin`
  --> $DIR/assoc-const-no-infer-ice-115806.rs:17:1
   |
LL | impl<TA> Pins<TA> for NoPin {}
   | --------------------------- first implementation here
...
LL | impl<USART, T> Pins<USART> for T where T: PinA<USART, A = const { &() }> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `NoPin`
   |
   = note: downstream crates may implement trait `PinA<_>` for type `NoPin`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
